feat(ui): bento layout + image cards

--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -11,9 +11,8 @@ type Props = {
 const { posts, lang } = Astro.props;
 ---
 
-<div class="grid gap-4">
+<div class="grid gap-4 sm:grid-cols-2 xl:grid-cols-3">
   {posts.map((p) => (
     <PostCard post={p} lang={lang} />
   ))}
 </div>
-
